--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "prettier": "3.6.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
